Lab3_TranslatorToC/translatorToC/gen/ExpressionParser.java
// Generated from /Users/Fadeev/Desktop/github/translatorToC/src/Expression.g4 by ANTLR 4.8

    import TreeNodes.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_TYPE=1, DOUBLE_TYPE=2, CHAR_TYPE=3, BOOL_TYPE=4, READ_INT_TYPE=5, 
		READ_DOUBLE_TYPE=6, READ_CHAR_TYPE=7, READ_BOOL_TYPE=8, PRINT_TOKEN=9, 
		READ_TOKEN=10, VAR_TOKEN=11, LET_TOKEN=12, EQ_TOKEN=13, WHILE=14, FOR=15, 
		IN=16, RANGE=17, COLON_G_TOKEN=18, COLON_V_TOKEN=19, IF=20, ELSE=21, RLB_TOKEN=22, 
		RRB_TOKEN=23, CLB_TOKEN=24, CRB_TOKEN=25, AND_TOKEN=26, OR_TOKEN=27, NOT_TOKEN=28, 
		TRUE_TOKEN=29, FALSE_TOKEN=30, PLUS_TOKEN=31, MINUS_TOKEN=32, MUL_TOKEN=33, 
		DIV_TOKEN=34, MOD_TOKEN=35, GT_TOKEN=36, GE_TOKEN=37, LT_TOKEN=38, LE_TOKEN=39, 
		EQ_LOG_TOKEN=40, NOT_EQ_TOKEN=41, DECIMAL=42, VARIABLE_TOKEN=43, NEW_LINE=44, 
		WHITE_SPACE=45;
	public static final int
		RULE_program = 0, RULE_mainBlock = 1, RULE_mainSubBlock = 2, RULE_print = 3, 
		RULE_newVar = 4, RULE_equating = 5, RULE_eqRight = 6, RULE_forBlock = 7, 
		RULE_whileBlock = 8, RULE_ifBlock = 9, RULE_justIf = 10, RULE_ifElse = 11, 
		RULE_range = 12, RULE_variable = 13, RULE_newLine = 14, RULE_maybeNewLine = 15, 
		RULE_mathExpression = 16, RULE_logExpression = 17, RULE_readVar = 18, 
		RULE_constOrVar = 19, RULE_mathOperators = 20, RULE_comparator = 21, RULE_type = 22, 
		RULE_binary = 23, RULE_bool = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainBlock", "mainSubBlock", "print", "newVar", "equating", 
			"eqRight", "forBlock", "whileBlock", "ifBlock", "justIf", "ifElse", "range", 
			"variable", "newLine", "maybeNewLine", "mathExpression", "logExpression", 
			"readVar", "constOrVar", "mathOperators", "comparator", "type", "binary", 
			"bool"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Int'", "'Double'", "'Char'", "'Bool'", "'readInt'", "'readDouble'", 
			"'readChar'", "'readBool'", "'print'", "'read'", "'var'", "'let'", "'='", 
			"'while'", "'for'", "'in'", "'range'", "'..'", "':'", "'if'", "'else'", 
			"'('", "')'", "'{'", "'}'", "'&&'", "'||'", "'!'", "'true'", "'false'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", "'=='", 
			"'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT_TYPE", "DOUBLE_TYPE", "CHAR_TYPE", "BOOL_TYPE", "READ_INT_TYPE", 
			"READ_DOUBLE_TYPE", "READ_CHAR_TYPE", "READ_BOOL_TYPE", "PRINT_TOKEN", 
			"READ_TOKEN", "VAR_TOKEN", "LET_TOKEN", "EQ_TOKEN", "WHILE", "FOR", "IN", 
			"RANGE", "COLON_G_TOKEN", "COLON_V_TOKEN", "IF", "ELSE", "RLB_TOKEN", 
			"RRB_TOKEN", "CLB_TOKEN", "CRB_TOKEN", "AND_TOKEN", "OR_TOKEN", "NOT_TOKEN", 
			"TRUE_TOKEN", "FALSE_TOKEN", "PLUS_TOKEN", "MINUS_TOKEN", "MUL_TOKEN", 
			"DIV_TOKEN", "MOD_TOKEN", "GT_TOKEN", "GE_TOKEN", "LT_TOKEN", "LE_TOKEN", 
			"EQ_LOG_TOKEN", "NOT_EQ_TOKEN", "DECIMAL", "VARIABLE_TOKEN", "NEW_LINE", 
			"WHITE_SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program node;
		public MainBlockContext main;
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((ProgramContext)_localctx).main = mainBlock();
			_localctx.node=new Program(((ProgramContext)_localctx).main.main)
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainBlockContext extends ParserRuleContext {
		public MainBlock main;
		public MainSubBlockContext subBlock;
		public MainBlockContext mainTail;
		public List<MaybeNewLineContext> maybeNewLine() {
			return getRuleContexts(MaybeNewLineContext.class);
		}
		public MaybeNewLineContext maybeNewLine(int i) {
			return getRuleContext(MaybeNewLineContext.class,i);
		}
		public MainSubBlockContext mainSubBlock() {
			return getRuleContext(MainSubBlockContext.class,0);
		}
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public MainBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterMainBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitMainBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitMainBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainBlockContext mainBlock() throws RecognitionException {
		MainBlockContext _localctx = new MainBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainBlock);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(54);
				maybeNewLine();
				setState(55);
				((MainBlockContext)_localctx).subBlock = mainSubBlock();
				setState(56);
				((MainBlockContext)_localctx).mainTail = mainBlock();
				setState(57);
				maybeNewLine();

				            _localctx.main=new MainBlock(((MainBlockContext)_localctx).subBlock.block, ((MainBlockContext)_localctx).mainTail.main)
				        
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				maybeNewLine();

				            _localctx.main=null
				        
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainSubBlockContext extends ParserRuleContext {
		public Node block;
		public ForBlockContext forBlc;
		public WhileBlockContext whileBlc;
		public IfBlockContext ifBlc;
		public EquatingContext eqBlc;
		public NewVarContext newBlc;
		public NewVarContext newVar;
		public PrintContext pntBlc;
		public List<MaybeNewLineContext> maybeNewLine() {
			return getRuleContexts(MaybeNewLineContext.class);
		}
		public MaybeNewLineContext maybeNewLine(int i) {
			return getRuleContext(MaybeNewLineContext.class,i);
		}
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public EquatingContext equating() {
			return getRuleContext(EquatingContext.class,0);
		}
		public NewVarContext newVar() {
			return getRuleContext(NewVarContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public MainSubBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainSubBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterMainSubBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitMainSubBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitMainSubBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainSubBlockContext mainSubBlock() throws RecognitionException {
		MainSubBlockContext _localctx = new MainSubBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainSubBlock);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				maybeNewLine();
				setState(66);
				((MainSubBlockContext)_localctx).forBlc = forBlock();
				setState(67);
				maybeNewLine();
				_localctx.block=((MainSubBlockContext)_localctx).forBlc.for
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				maybeNewLine();
				setState(71);
				((MainSubBlockContext)_localctx).whileBlc = whileBlock();
				setState(72);
				maybeNewLine();
				_localctx.block=((MainSubBlockContext)_localctx).whileBlc.node
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				maybeNewLine();
				setState(76);
				((MainSubBlockContext)_localctx).ifBlc = ifBlock();
				setState(77);
				maybeNewLine();
				_localctx.block=((MainSubBlockContext)_localctx).ifBlc.node
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(80);
				maybeNewLine();
				setState(81);
				((MainSubBlockContext)_localctx).eqBlc = equating();
				setState(82);
				maybeNewLine();
				_localctx.block=null
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				maybeNewLine();
				setState(86);
				((MainSubBlockContext)_localctx).newBlc = ((MainSubBlockContext)_localctx).newVar = newVar();
				setState(87);
				maybeNewLine();
				_localctx.block=((MainSubBlockContext)_localctx).newVar.expr
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				maybeNewLine();
				setState(91);
				((MainSubBlockContext)_localctx).pntBlc = print();
				setState(92);
				maybeNewLine();
				_localctx.block=((MainSubBlockContext)_localctx).pntBlc.pnt
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public Print pnt;
		public VariableContext vr;
		public TerminalNode PRINT_TOKEN() { return getToken(ExpressionParser.PRINT_TOKEN, 0); }
		public TerminalNode RLB_TOKEN() { return getToken(ExpressionParser.RLB_TOKEN, 0); }
		public TerminalNode RRB_TOKEN() { return getToken(ExpressionParser.RRB_TOKEN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(PRINT_TOKEN);
			setState(98);
			match(RLB_TOKEN);
			setState(99);
			((PrintContext)_localctx).vr = variable();
			setState(100);
			match(RRB_TOKEN);
			_localctx.pnt=new Print(((PrintContext)_localctx).vr.var)
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NewVarContext extends ParserRuleContext {
		public NewVar expr;
		public ConstOrVarContext mut;
		public VariableContext var;
		public TypeContext t;
		public EqRightContext right;
		public List<TerminalNode> WHITE_SPACE() { return getTokens(ExpressionParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(ExpressionParser.WHITE_SPACE, i);
		}
		public TerminalNode COLON_V_TOKEN() { return getToken(ExpressionParser.COLON_V_TOKEN, 0); }
		public TerminalNode EQ_TOKEN() { return getToken(ExpressionParser.EQ_TOKEN, 0); }
		public ConstOrVarContext constOrVar() {
			return getRuleContext(ConstOrVarContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public EqRightContext eqRight() {
			return getRuleContext(EqRightContext.class,0);
		}
		public NewVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_newVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterNewVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitNewVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitNewVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NewVarContext newVar() throws RecognitionException {
		NewVarContext _localctx = new NewVarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_newVar);
		int _la;
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				((NewVarContext)_localctx).mut = constOrVar();
				setState(104);
				match(WHITE_SPACE);
				setState(105);
				((NewVarContext)_localctx).var = variable();
				setState(106);
				match(COLON_V_TOKEN);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(107);
					match(WHITE_SPACE);
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				((NewVarContext)_localctx).t = type();
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(114);
					match(WHITE_SPACE);
					}
					}
					setState(119);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(120);
				match(EQ_TOKEN);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(121);
					match(WHITE_SPACE);
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(127);
				((NewVarContext)_localctx).right = eqRight();

				          _localctx.expr=new NewVar(((NewVarContext)_localctx).mut.mutable, ((NewVarContext)_localctx).var.var, ((NewVarContext)_localctx).t.t, ((NewVarContext)_localctx).right.right)
				      
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				((NewVarContext)_localctx).mut = constOrVar();
				setState(131);
				match(WHITE_SPACE);
				setState(132);
				((NewVarContext)_localctx).var = variable();
				setState(133);
				match(COLON_V_TOKEN);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(134);
					match(WHITE_SPACE);
					}
					}
					setState(139);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(140);
				((NewVarContext)_localctx).t = type();

				          _localctx.expr=new NewVar(((NewVarContext)_localctx).mut.mutable, ((NewVarContext)_localctx).var.var, ((NewVarContext)_localctx).t.t, null)
				      
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				((NewVarContext)_localctx).mut = constOrVar();
				setState(144);
				match(WHITE_SPACE);
				setState(145);
				((NewVarContext)_localctx).var = variable();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(146);
					match(WHITE_SPACE);
					}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(152);
				match(EQ_TOKEN);
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WHITE_SPACE) {
					{
					{
					setState(153);
					match(WHITE_SPACE);
					}
					}
					setState(158);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(159);
				((NewVarContext)_localctx).right = eqRight();

				          _localctx.expr=new NewVar(((NewVarContext)_localctx).mut.mutable, ((NewVarContext)_localctx).var.var, null, ((NewVarContext)_localctx).right.right)
				      
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EquatingContext extends ParserRuleContext {
		public Equating equat;
		public VariableContext var;
		public EqRightContext right;
		public TerminalNode EQ_TOKEN() { return getToken(ExpressionParser.EQ_TOKEN, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public EqRightContext eqRight() {
			return getRuleContext(EqRightContext.class,0);
		}
		public List<TerminalNode> WHITE_SPACE() { return getTokens(ExpressionParser.WHITE_SPACE); }
		public TerminalNode WHITE_SPACE(int i) {
			return getToken(ExpressionParser.WHITE_SPACE, i);
		}
		public EquatingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equating; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterEquating(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitEquating(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitEquating(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquatingContext equating() throws RecognitionException {
		EquatingContext _localctx = new EquatingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equating);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			((EquatingContext)_localctx).var = variable();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(165);
				match(WHITE_SPACE);
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			match(EQ_TOKEN);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITE_SPACE) {
				{
				{
				setState(172);
				match(WHITE_SPACE);
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178);
			((EquatingContext)_localctx).right = eqRight();
			_localctx.equat=new Equating(((EquatingContext)_localctx).var.var, ((EquatingContext)_localctx).right.right)
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqRightContext extends ParserRuleContext {
		public EqRight right;
		public ReadVarContext vr;
		public MathExpressionContext mathExpression() {
			return getRuleContext(MathExpressionContext.class,0);
		}
		public ReadVarContext readVar() {
			return getRuleContext(ReadVarContext.class,0);
		}
		public EqRightContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqRight; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterEqRight(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitEqRight(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitEqRight(this);
			else return visitor.visitChildren(this);
		}
	}
